# cg-app

./: .env  .gitignore  Dockerfile  README.MD  pyproject.toml
app/: __init__.py  main.py
app/auth/: api.py  dependencies.py  schemas.py
app/core/: config.py  db.py  exceptions.py  models.py  utils.py
app/posts/: api.py  crud.py  dependencies.py  models.py  schemas.py
app/router/: endpoints.py
app/subscriptions/: api.py  crud.py  dependencies.py  models.py
app/users/: api.py  crud.py  dependencies.py  models.py  schemas.py
migrations/: env.py
migrations/versions/: 3159f1d8331d_code_challenge_init.py
